// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Background renders basic background 1`] = `
<div
  className="background"
>
  <div
    className="children"
  />
</div>
`;

exports[`Background renders correctly 1`] = `
<div
  className="background"
>
  <div
    className="illustration"
  >
    <div
      className="children"
    />
  </div>
</div>
`;
